tests/baselines/reference/arrayOfSubtypeIsAssignableToReadonlyArray(strict=true).errors.txt
arrayOfSubtypeIsAssignableToReadonlyArray.ts(1,11): error TS7008: Member 'a' implicitly has an 'any' type.
arrayOfSubtypeIsAssignableToReadonlyArray.ts(2,21): error TS7008: Member 'b' implicitly has an 'any' type.
arrayOfSubtypeIsAssignableToReadonlyArray.ts(3,31): error TS7008: Member 'c' implicitly has an 'any' type.
arrayOfSubtypeIsAssignableToReadonlyArray.ts(13,1): error TS2322: Type 'A[]' is not assignable to type 'readonly B[]'.
  Property 'b' is missing in type 'A' but required in type 'B'.
arrayOfSubtypeIsAssignableToReadonlyArray.ts(18,1): error TS2322: Type 'C<A>' is not assignable to type 'readonly B[]'.
  The types returned by 'concat(...)' are incompatible between these types.
    Type 'A[]' is not assignable to type 'B[]'.
      Type 'A' is not assignable to type 'B'.


==== arrayOfSubtypeIsAssignableToReadonlyArray.ts (5 errors) ====
    class A { a }
              ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    class B extends A { b }
                        ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
    class C<T> extends Array<T> { c }
                                  ~
!!! error TS7008: Member 'c' implicitly has an 'any' type.
    declare var ara: A[];
    declare var arb: B[];
    declare var cra: C<A>;
    declare var crb: C<B>;
    declare var rra: ReadonlyArray<A>;
    declare var rrb: ReadonlyArray<B>;
    rra = ara;
    rrb = arb; // OK, Array<B> is assignable to ReadonlyArray<A>
    rra = arb;
    rrb = ara; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type 'A[]' is not assignable to type 'readonly B[]'.
!!! error TS2322:   Property 'b' is missing in type 'A' but required in type 'B'.
!!! related TS2728 arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:21: 'b' is declared here.
    
    rra = cra;
    rra = crb; // OK, C<B> is assignable to ReadonlyArray<A>
    rrb = crb;
    rrb = cra; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type 'C<A>' is not assignable to type 'readonly B[]'.
!!! error TS2322:   The types returned by 'concat(...)' are incompatible between these types.
!!! error TS2322:     Type 'A[]' is not assignable to type 'B[]'.
!!! error TS2322:       Type 'A' is not assignable to type 'B'.
    